--- a/src/css/style.css
+++ b/src/css/style.css
@@ -108,7 +108,7 @@ body {
 /*  Main styles */
 
 .main {
-	margin-top: 40px;
+	margin: 50px 0px;
 }
 .main__text {
 	text-align: center;
@@ -138,23 +138,69 @@ body {
 
 /* Quote styles */
 .quote {
+	height: 50%;
+	background-color: #e5e7eb;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 .quote__text {
+	width: 55%;
+	font-style: italic;
+	font-weight: 300;
+	font-size: 30px;
+	color: #1f2937;
 }
+
 .quote__author {
+	color: #1f2937;
+	font-weight: 800;
+	text-align: end;
+	width: 60%;
+	margin-top: -45px;
 }
-.up {
+
+.sign-up {
+	width: 70%;
+	background-color: #3882f6;
+	border-radius: 10px;
+	padding: 30px 10px;
+	margin: 90px auto;
+	color: #e5e7eb;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
 }
-.up__title {
+
+.sign-up__title {
+	color: #f9faf8;
+	margin-bottom: 0;
 }
-.up__paragraph {
+
+.sign-up__paragraph {
+	margin-top: 0;
+	font-weight: 300;
 }
-.up__button {
+
+.sign-up__button {
+	background-color: #3882f6;
+	color: #f9faf8;
+	font-weight: 550;
+	padding: 6px 30px;
+	border: 2px solid #f9faf8;
+	border-radius: 5px;
 }
 
 /* Footer styles */
 
 .footer {
+	background-color: #1f2937;
+	height: 15%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 .footer__text {
+	color: #f9faf8;
 }
